tests/baselines/reference/privateNameBadDeclaration(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
privateNameBadDeclaration.ts(3,3): error TS18016: Private identifiers are not allowed outside class bodies.
privateNameBadDeclaration.ts(4,3): error TS18016: Private identifiers are not allowed outside class bodies.
privateNameBadDeclaration.ts(5,7): error TS18016: Private identifiers are not allowed outside class bodies.
privateNameBadDeclaration.ts(5,7): error TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.
privateNameBadDeclaration.ts(9,3): error TS18016: Private identifiers are not allowed outside class bodies.
privateNameBadDeclaration.ts(10,3): error TS18016: Private identifiers are not allowed outside class bodies.
privateNameBadDeclaration.ts(11,7): error TS18016: Private identifiers are not allowed outside class bodies.
privateNameBadDeclaration.ts(11,7): error TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.
privateNameBadDeclaration.ts(15,10): error TS2339: Property '#z' does not exist on type 'C'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== privateNameBadDeclaration.ts (9 errors) ====
    function A() { }
    A.prototype = {
      #x: 1,         // Error
      ~~
!!! error TS18016: Private identifiers are not allowed outside class bodies.
      #m() {},       // Error
      ~~
!!! error TS18016: Private identifiers are not allowed outside class bodies.
      get #p() { return "" } // Error
          ~~
!!! error TS18016: Private identifiers are not allowed outside class bodies.
          ~~
!!! error TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.
    }
    class B { }
    B.prototype = {
      #y: 2,         // Error
      ~~
!!! error TS18016: Private identifiers are not allowed outside class bodies.
      #m() {},       // Error
      ~~
!!! error TS18016: Private identifiers are not allowed outside class bodies.
      get #p() { return "" } // Error
          ~~
!!! error TS18016: Private identifiers are not allowed outside class bodies.
          ~~
!!! error TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.
    }
    class C {
      constructor() {
        this.#z = 3;
             ~~
!!! error TS2339: Property '#z' does not exist on type 'C'.
      }
    }